objects/Avention_Connection_Setting__mdt.object
<CustomObject>
    <description>Holds the Connection Details for the Aggro Service</description>
    <fields>
        <fullName>Avention_Access_Token__c</fullName>
        <description>The Token to access the avention service.</description>
        <label>Avention Access Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Avention_Company_URL__c</fullName>
        <description>The URL to match avention ids to companies</description>
        <label>Avention Company URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Avention_Search_URL__c</fullName>
        <description>Holds the Connection Details for the Avention Service</description>
        <label>Avention Search URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Avention Connection Setting</label>
    <pluralLabel>Avention Connection Settings</pluralLabel>
</CustomObject>